--- a/index.html
+++ b/index.html
@@ -393,7 +393,7 @@
                                     </div>
                                     <div class="col-md-10">
                                         <div class="review-comment">
-                                            <h3>“I love Ensural, I highly it, Everyone Try It Now”</h3>
+                                            <h3>“I love Ensural, I highly recommend it, Everyone Try It Now”</h3>
                                             <p>
                                                 - Krin Fox
                                                 <span>
