--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <!--<![endif]-->
 
 <head>
+
     <meta charset="UTF-8">
     <title>Ensural | Business Insurance</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <link rel="shortcut icon" href="favicon.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="16x16" href='assets/img/favicon/favicon-16x16.png'>
 
     <!-- Bootstrap 3.3.2 -->
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -478,13 +478,13 @@
                             <img src="assets/img/freeze/freeze-angled2.png" alt="">
                         </div>
                         <div class="platforms">
-                            <a href="#" class="btn btn-primary inverse scrollpoint sp-effect1">
+                            <a href="#support" class="btn btn-primary inverse scrollpoint sp-effect1">
                                 <i class="fa fa-building-o fa-3x pull-left"></i>
                                 <span>Office</span><br>
                                 <b>Business</b>
                             </a>
 
-                                <a href="#" class="btn btn-primary inverse scrollpoint sp-effect2">
+                                <a href="#support" class="btn btn-primary inverse scrollpoint sp-effect2">
                                     <i class="fa fa-home fa-3x pull-left"></i>
                                     <span>Home</span><br>
                                     <b>Business</b>
