--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
                         <div class="tp-caption large_white_light sft" data-x="center" data-y="250" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
-                            Pasonalized for you and your business <i class="fa fa-heart"></i>
+                            Customized for you and your business <i class="fa fa-heart"></i>
                         </div>
 
 
@@ -236,8 +236,8 @@
                     <div class="col-md-3 col-sm-3 col-xs-6">
                         <div class="about-item scrollpoint sp-effect2">
                             <i class="fa fa-tachometer fa-2x"></i>
-                            <h3>Intelligent Insurance</h3>
-                            <p>Right solution with customized advice, quotes, supported by AI</p>
+                            <h3>Intelligent Compliance</h3>
+                            <p>Always be compliant, supported by AI</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6" >
