--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ensural | Business Insurance</title>
+    <title>Ensural | Business risk and compliance/title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="favicon.png">
@@ -121,7 +121,7 @@
 
                         </div>
                         <div class="tp-caption large_white_light sfb" data-x="550" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1500" data-easing="Power4.easeOut">
-                            Personal Risk Manager
+                            Risk and compliance Manager
                         </div>
 
                         <div class="tp-caption sfb hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
@@ -195,13 +195,13 @@
 
 
                         <div class="tp-caption mediumlarge_light_white sfl hidden-xs" data-x="left" data-y="center" data-hoffset="0" data-voffset="-50" data-speed="1000" data-start="1000" data-easing="Power4.easeOut">
-                            Risk and Insurance Management
+                            Risk and Compliance Management
                         </div>
                         <div class="tp-caption mediumlarge_light_white sft hidden-xs" data-x="left" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1200" data-easing="Power4.easeOut">
                            Simpler, smarter with better technology
                         </div>
                         <div class="tp-caption small_light_white sfb hidden-xs" data-x="left" data-y="center" data-hoffset="0" data-voffset="80" data-speed="1000" data-start="1600" data-easing="Power4.easeOut">
-                           <p>We’re using technology to simplify the entire insurance <br> and risk management experience. <br>And it's free</p>
+                           <p>We’re using AI to simplify the entire compliance <br> and risk management experience. <br>And it's free</p>
                         </div>
 
                         <div class="tp-caption lfl hidden-xs" data-x="left" data-y="center" data-hoffset="0" data-voffset="160" data-speed="1000" data-start="1800" data-easing="Power4.easeOut">
@@ -229,7 +229,7 @@
                 <div class="section-heading scrollpoint sp-effect3">
                     <h1>About Us</h1>
                     <div class="divider"></div>
-                    <p>A Powerful Risk Management Platform for Small Businesses</p>
+                    <p>A Powerful Risk Management Platform</p>
                 </div>
 
                 <div class="row">
@@ -280,7 +280,7 @@
                             </a>
                             <div class="media-body">
                                 <h3 class="media-heading">Make Informed Decision</h3>
-                                Understand insurance & risk needs in 10 seconds, with real, accurate quotes
+                                Understand compliance & risk needs in 10 seconds, with real, accurate quotes
                             </div>
                         </div>
                         <div class="media text-right feature">
@@ -357,7 +357,7 @@
                             </a>
                             <div class="media-body">
                                 <h3 class="media-heading">Totally Transparent</h3>
-                                Clear view of all your insurance information and data in one place
+                                Clear view of all your risk and compliance gap and data in one place
                             </div>
                         </div>
                         <div class="media active feature">
@@ -417,7 +417,7 @@
                                     </div>
                                     <div class="col-md-10">
                                         <div class="review-comment">
-                                            <h3>“Ensural Is The most stable and easiest insurance platform I Have Ever Experienced”</h3>
+                                            <h3>“Ensural Is The most stable and easiest risk and compliance platform I Have Ever Experienced”</h3>
                                             <p>
                                                 - Theodore Willis
                                                 <span>
