--- a/index.html
+++ b/index.html
@@ -306,8 +306,8 @@
                                 <i class="fa fa-medkit fa-2x"></i>
                             </a>
                             <div class="media-body">
-                                <h3 class="media-heading">Fast Claim & Cancellation </h3>
-                                Painless and quick service for cancellations and claims
+                                <h3 class="media-heading">Fast recommendation & Cancellation </h3>
+                                Painless and quick service for cancellations and recommendation
                             </div>
                         </div>
                         <div class="media text-right feature">
