--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Ensural | Business Insurance</title>
+    <title>Ensural | Risk Management</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <link rel="shortcut icon" href="favicon.png">
@@ -121,7 +121,7 @@
 
                         </div>
                         <div class="tp-caption large_white_light sfb" data-x="550" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1500" data-easing="Power4.easeOut">
-                            Personal Risk Manager
+                            Risk & compliance Manager
                         </div>
 
                         <div class="tp-caption sfb hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
@@ -195,13 +195,13 @@
 
 
                         <div class="tp-caption mediumlarge_light_white sfl hidden-xs" data-x="left" data-y="center" data-hoffset="0" data-voffset="-50" data-speed="1000" data-start="1000" data-easing="Power4.easeOut">
-                            Risk and Insurance Management
+                            Risk and compliance Management
                         </div>
                         <div class="tp-caption mediumlarge_light_white sft hidden-xs" data-x="left" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1200" data-easing="Power4.easeOut">
-                           Simpler, smarter with better technology
+                           Simpler, smarter with AI technology
                         </div>
                         <div class="tp-caption small_light_white sfb hidden-xs" data-x="left" data-y="center" data-hoffset="0" data-voffset="80" data-speed="1000" data-start="1600" data-easing="Power4.easeOut">
-                           <p>We’re using technology to simplify the entire insurance <br> and risk management experience. <br>And it's free</p>
+                           <p>We’re using technology to simplify the entire compliance <br> and risk management experience. <br>And it's free</p>
                         </div>
 
                         <div class="tp-caption lfl hidden-xs" data-x="left" data-y="center" data-hoffset="0" data-voffset="160" data-speed="1000" data-start="1800" data-easing="Power4.easeOut">
@@ -229,7 +229,7 @@
                 <div class="section-heading scrollpoint sp-effect3">
                     <h1>About Us</h1>
                     <div class="divider"></div>
-                    <p>A Powerful Risk Management Platform for Small Businesses</p>
+                    <p>A Powerful Risk Management Platform</p>
                 </div>
 
                 <div class="row">
@@ -237,7 +237,7 @@
                         <div class="about-item scrollpoint sp-effect2">
                             <i class="fa fa-tachometer fa-2x"></i>
                             <h3>Intelligent Compliance</h3>
-                            <p>Always be compliant, supported by AI</p>
+                            <p>Constant compliance, supported by AI</p>
                         </div>
                     </div>
                     <div class="col-md-3 col-sm-3 col-xs-6" >
@@ -280,7 +280,7 @@
                             </a>
                             <div class="media-body">
                                 <h3 class="media-heading">Make Informed Decision</h3>
-                                Understand insurance & risk needs in 10 seconds, with real, accurate quotes
+                                Understand risk & compliance gaps needs in 10 seconds, with real, accurate data
                             </div>
                         </div>
                         <div class="media text-right feature">
@@ -288,8 +288,8 @@
                                 <i class="fa fa-cloud-upload fa-2x"></i>
                             </a>
                             <div class="media-body">
-                                <h3 class="media-heading">Manage Your Policies</h3>
-                                A smart digital wallet of all policies & rates, with peer comparison, certificate
+                                <h3 class="media-heading">Manage regulation updates</h3>
+                                A smart digital wallet of all regulation updates & analytics, with competitive benchmarking
                             </div>
                         </div>
                         <div class="media text-right feature">
@@ -297,8 +297,8 @@
                                 <i class="fa fa-calendar fa-2x"></i>
                             </a>
                             <div class="media-body">
-                                <h3 class="media-heading">Smart Renewal</h3>
-                                Renewal is a critical time to improve rate and coverage, we never miss a chance to impress
+                                <h3 class="media-heading">Smart Predictions</h3>
+                                Accurate prediction during critical to improve operational efficiency and compliance
                             </div>
                         </div>
                         <div class="media text-right feature">
@@ -306,8 +306,8 @@
                                 <i class="fa fa-medkit fa-2x"></i>
                             </a>
                             <div class="media-body">
-                                <h3 class="media-heading">Fast Claim & Cancellation </h3>
-                                Painless and quick service for cancellations and claims
+                                <h3 class="media-heading">Fast Recommendation & Cancellation </h3>
+                                Painless and quick service for cancellations and recommendation
                             </div>
                         </div>
                         <div class="media text-right feature">
@@ -568,7 +568,6 @@
                 </div>
                 <div class="rights">
                     <p>Copyright &copy; 2014</p>
-                    <p>Credit for design <a href="http://www" target="_blank">Scoop</a></p>
                 </div>
             </div>
         </footer>
