--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
                         </div>
                         <div class="tp-caption large_white_light sfb" data-x="550" data-y="center" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1500" data-easing="Power4.easeOut">
-                            Risk & compliance Manager
+                            Risk & Compliance Manager
                         </div>
 
                         <div class="tp-caption sfb hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
@@ -279,8 +279,8 @@
                                 <i class="fa fa-compass fa-2x"></i>
                             </a>
                             <div class="media-body">
-                                <h3 class="media-heading">Make Informed Decision</h3>
-                                Understand risk & compliance gaps needs in 10 seconds, with real, accurate data
+                                <h3 class="media-heading">Make Informed Decisions</h3>
+                                Understand risk & compliance gap needs in 10 seconds, with real, accurate data
                             </div>
                         </div>
                         <div class="media text-right feature">
