add affiliated logos

--- a/index.html
+++ b/index.html
@@ -262,8 +262,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="section-heading scrollpoint sp-effect3">
+
+                </div>
+
+
+
+                </div>
             </div>
+
+
         </section>
+
 
         <section id="features">
             <div class="container">
@@ -357,7 +367,7 @@
                             </a>
                             <div class="media-body">
                                 <h3 class="media-heading">Totally Transparent</h3>
-                                Clear view of all your insurance information and data in one place
+                                Clear view of all your risk information and data in one place
                             </div>
                         </div>
                         <div class="media active feature">
@@ -417,7 +427,7 @@
                                     </div>
                                     <div class="col-md-10">
                                         <div class="review-comment">
-                                            <h3>“Ensural Is The most stable and easiest insurance platform I Have Ever Experienced”</h3>
+                                            <h3>“Ensural Is The most stable and easiest risk platform I Have Ever Experienced”</h3>
                                             <p>
                                                 - Theodore Willis
                                                 <span>
@@ -558,14 +568,39 @@
 
         <footer>
             <div class="container">
+
+              <div class="row">
+
+                <div class="col-md-4 col-sm-4" >
+                    <img src="assets/img/freeze/alogos/IBM.png" class="img-responsive scrollpoint sp-effect1" alt="">
+                </div>
+                <div class="col-md-4 col-sm-4" >
+                    <img src="assets/img/freeze/alogos/nextai.png" class="img-responsive scrollpoint sp-effect5" alt="">
+                </div>
+                <div class="col-md-4 col-sm-4" >
+                    <img src="assets/img/freeze/alogos/nvidia.png" class="img-responsive scrollpoint sp-effect5" alt="">
+                </div>
+                <div class="col-md-4 col-sm-4" >
+                    <img src="assets/img/freeze/alogos/Communitech.png" class="img-responsive scrollpoint sp-effect5" alt="">
+                </div>
+                <div class="col-md-4 col-sm-4" >
+                    <img src="assets/img/freeze/alogos/nextcan.png" class="img-responsive scrollpoint sp-effect5" alt="">
+                </div>
+                <div class="col-md-4 col-sm-4" >
+                    <img src="assets/img/freeze/alogos/velocity.png" class="img-responsive scrollpoint sp-effect5" alt="">
+                </div>
+
+
                 <a href="#" class="scrollpoint sp-effect3">
                     <img src="assets/img/freeze/logo.png" alt="" class="logo">
                 </a>
+
                 <div class="social">
                     <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-twitter fa-lg"></i></a>
                     <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-google-plus fa-lg"></i></a>
                     <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-facebook fa-lg"></i></a>
                 </div>
+
                 <div class="rights">
                     <p>Copyright &copy; 2014</p>
                 </div>
