--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
                                     </a>
                                     <div class="media-body">
                                         <h4 class="media-heading">
-                                            <a href="mailto:support@oleose.com">support@ensural.com</a>
+                                            <a href="mailto:support@oleose.com">info@ensural.com</a>
                                         </h4>
                                     </div>
                                 </div>
