change in social media

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
                         <div class="tp-caption large_white_light sft" data-x="center" data-y="250" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
-                            Customized for you and your business <i class="fa fa-heart"></i>
+                            Customized for you and your business
                         </div>
 
 
@@ -585,10 +585,10 @@
                     <img src="assets/img/freeze/alogos/Communitech.png" class="img-responsive scrollpoint sp-effect5" alt="">
                 </div>
                 <div class="col-md-4 col-sm-4" >
-                    <img src="assets/img/freeze/alogos/nextcan.png" class="img-responsive scrollpoint sp-effect5" alt="">
+                    <img src="assets/img/freeze/alogos/Nextcan.png" class="img-responsive scrollpoint sp-effect5" alt="">
                 </div>
                 <div class="col-md-4 col-sm-4" >
-                    <img src="assets/img/freeze/alogos/velocity.png" class="img-responsive scrollpoint sp-effect5" alt="">
+                    <img src="assets/img/freeze/alogos/Velocity.png" class="img-responsive scrollpoint sp-effect5" alt="">
                 </div>
 
 
@@ -597,9 +597,9 @@
                 </a>
 
                 <div class="social">
-                    <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-twitter fa-lg"></i></a>
+                    <a href="https://twitter.com/TheEnsural" class="scrollpoint sp-effect3"><i class="fa fa-twitter fa-lg"></i></a>
                     <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-google-plus fa-lg"></i></a>
-                    <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-facebook fa-lg"></i></a>
+                    <a href="https://www.linkedin.com/company-beta/22764320/" class="scrollpoint sp-effect3"><i class="fa fa-linkedin fa-lg"></i></a>
                 </div>
 
                 <div class="rights">
