--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 
 
                         <div class="tp-caption large_white_light sft" data-x="center" data-y="250" data-hoffset="0" data-voffset="0" data-speed="1000" data-start="1400" data-easing="Power4.easeOut">
-                            Customized for you and your business
+                            World's largest dataset about risk
                         </div>
 
 
