A LEADING AI PROVIDER TO THE COMMERCIAL INSURANCE INDUSTRY

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="section-heading scrollpoint sp-effect3">
                     <h1>About Us</h1>
                     <div class="divider"></div>
-                    <p>A Powerful Risk Management Platform</p>
+                    <p>A LEADING AI PROVIDER TO THE COMMERCIAL INSURANCE INDUSTRY</p>
                 </div>
 
                 <div class="row">
