Changing to email sign up

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <li><a href="#reviews">reviews</a>
 
 
-                            <li><a class="getApp" href="#getApp">Sign Up</a>
+                            <li><a class="getApp" href="mailto:info@ensural.com?Subject=Hello%20Ensural">Sign Up</a>
                             </li>
                             <li><a href="#support">support</a>
                             </li>
@@ -128,7 +128,7 @@
                             <a href="#about" class="btn btn-primary inverse btn-lg">LEARN MORE</a>
                         </div>
                         <div class="tp-caption sfr hidden-xs" data-x="745" data-y="center" data-hoffset="0" data-voffset="85" data-speed="1500" data-start="1900" data-easing="Power4.easeOut">
-                            <a href="#getApp" class="btn btn-default btn-lg">Sign Up</a>
+                            <a href="mailto:info@ensural.com?Subject=Hello%20Ensural" class="btn btn-default btn-lg">Sign Up</a>
                         </div>
 
                     </li>
@@ -478,7 +478,7 @@
                 <div class="section-heading inverse scrollpoint sp-effect3">
                     <h1>Sign Up</h1>
                     <div class="divider"></div>
-                    <p>Choose where you work and get started!</p>
+                    <p>Choose the line of business and get started!</p>
                 </div>
 
                 <div class="row">
@@ -487,16 +487,16 @@
                             <img src="assets/img/freeze/freeze-angled2.png" alt="">
                         </div>
                         <div class="platforms">
-                            <a href="#" class="btn btn-primary inverse scrollpoint sp-effect1">
+                            <a href="mailto:info@ensural.com?Subject=Inquiry%20for%20Commercial%20Line%20Products" class="btn btn-primary inverse scrollpoint sp-effect1">
                                 <i class="fa fa-building-o fa-3x pull-left"></i>
-                                <span>Office</span><br>
-                                <b>Business</b>
+                                <span>Commerical</span><br>
+                                <b>Lines</b>
                             </a>
 
-                                <a href="#" class="btn btn-primary inverse scrollpoint sp-effect2">
+                                <a href="mailto:info@ensural.com?Subject=Inquiry%20for%20Personal%20Line%20Products" class="btn btn-primary inverse scrollpoint sp-effect2">
                                     <i class="fa fa-home fa-3x pull-left"></i>
-                                    <span>Home</span><br>
-                                    <b>Business</b>
+                                    <span>Personal</span><br>
+                                    <b>Lines</b>
                                 </a>
                         </div>
 
