--- a/index.html
+++ b/index.html
@@ -371,8 +371,8 @@
                             </div>
                         </div>
                         <div class="media active feature">
-                            <a class="pull-left" href="#">
-                                <i class="fa fa-plus fa-2x"></i>
+                            <a class="pull-left" href="mailto:info@ensural.com?Subject=Request%20for%20Demo">
+                                <i class="fa fa-plus fa-2x" ></i>
                             </a>
                             <div class="media-body">
                                 <h3 class="media-heading">And much more!</h3>
