Removed phone contact and improved customers testimony quotes

--- a/index.html
+++ b/index.html
@@ -295,15 +295,6 @@
                         </div>
                         <div class="media text-right feature">
                             <a class="pull-right" href="#">
-                                <i class="fa fa-cloud-upload fa-2x"></i>
-                            </a>
-                            <div class="media-body">
-                                <h3 class="media-heading">Manage regulation updates</h3>
-                                A smart digital wallet of all regulation updates & analytics, with competitive benchmarking
-                            </div>
-                        </div>
-                        <div class="media text-right feature">
-                            <a class="pull-right" href="#">
                                 <i class="fa fa-calendar fa-2x"></i>
                             </a>
                             <div class="media-body">
@@ -398,12 +389,12 @@
                                 <div class="row">
                                     <div class="col-md-2">
                                         <div class="review-person">
-                                            <img src="http://api.randomuser.me/portraits/women/94.jpg" alt="" class="img-responsive">
+                                            <img src="http://api.randomuser.me/portraits/women/2.jpg" alt="" class="img-responsive">
                                         </div>
                                     </div>
                                     <div class="col-md-10">
                                         <div class="review-comment">
-                                            <h3>“I love Ensural, I highly recommend it, everyone should try it now”</h3>
+                                            <h3>“Since using Ensural for my small business, I have felt more professional and organized. I was using another SaaS product before this, and I just felt like my customers deserved better. Ensural gave me options that I did not have with the other service and made my insurance process went smoothly and seamlessly.”</h3>
                                             <p>
                                                 - Krin Fox
                                                 <span>
@@ -422,7 +413,7 @@
                                 <div class="row">
                                     <div class="col-md-2">
                                         <div class="review-person">
-                                            <img src="http://api.randomuser.me/portraits/men/70.jpg" alt="" class="img-responsive">
+                                            <img src="http://api.randomuser.me/portraits/men/71.jpg" alt="" class="img-responsive">
                                         </div>
                                     </div>
                                     <div class="col-md-10">
@@ -451,7 +442,7 @@
                                     </div>
                                     <div class="col-md-10">
                                         <div class="review-comment">
-                                            <h3>“Keep it up guys! Your work rules! Cheers ”</h3>
+                                            <h3>“Ensural helped my business grow and track insurance through their app.”</h3>
                                             <p>
                                                 - Ricky Grant
                                                 <span>
@@ -551,14 +542,7 @@
                                         </h4>
                                     </div>
                                 </div>
-                                <div class="media">
-                                    <a class="pull-left" href="#" >
-                                        <i class="fa fa-phone fa-2x"></i>
-                                    </a>
-                                    <div class="media-body">
-                                        <h4 class="media-heading">+1 6478642446</h4>
-                                    </div>
-                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -605,6 +589,7 @@
                 <div class="rights">
                     <p>Copyright &copy; 2014</p>
                 </div>
+              </div>
             </div>
         </footer>
 
